2011-02-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc83xx/network/tsec.c: New default MAC configuration.  Set MDIO
	clock according to actual CCB frequency.  Print media info only if we
	have a PHY.  Avoid infinite loop in media adaption.

2011-02-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* new-exceptions/bspsupport/vectors.h: Added defines PPC_EXC_GPR_TYPE,
	PPC_EXC_GPR_SIZE, PPC_EXC_GPR_OFFSET, PPC_EXC_MINIMAL_FRAME_SIZE, and
	PPC_EXC_FRAME_SIZE.  Changed layout of BSP_Exception_frame.

2011-02-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* new-exceptions/bspsupport/vectors.h: Add extern "C" {}.

2011-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/include/powerpc-utility.h: Fixed LINKER_SYMBOL() for
	assembler compatibilty.  Added synchronization, cache, and alternate
	time base functions.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc55xx/include/mpc55xx.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc6xx/altivec/vec_sup.c, mpc6xx/mmu/bat.h:
	Fix up comments having been broken in previous commit.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* e500/mmu/mmu.c, mpc505/ictrl/ictrl.c, mpc505/timer/timer.c,
	mpc5xx/ictrl/ictrl.c, mpc5xx/timer/timer.c,
	mpc6xx/altivec/vec_sup.c, mpc6xx/clock/c_clock.c,
	mpc6xx/mmu/bat.c, mpc6xx/mmu/bat.h, mpc6xx/mmu/pte121.c,
	mpc8260/timer/timer.c, mpc8xx/timer/timer.c, new-exceptions/cpu.c,
	new-exceptions/bspsupport/ppc_exc_initialize.c,
	ppc403/clock/clock.c, ppc403/console/console.c,
	ppc403/console/console.c.polled, ppc403/console/console405.c,
	ppc403/irq/ictrl.c, ppc403/tty_drv/tty_drv.c,
	rtems/powerpc/cache.h, shared/include/powerpc-utility.h, shared/src/cache.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.
